added share component

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,340 +1,1 @@
-.form-wrapper {
-	width: 57%;
-	padding-left: 80px;
-}
-
-.blockquote,
-.blockquote1 {
-	position: relative;
-	display: block;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 600;
-	color: #ffffff;
-	padding: 30px 0;
-	padding: 15px 0;
-	width: 100%;
-	z-index: 1;
-	margin: 81px auto;
-	align-self: center;
-	border-top: solid 1px #f78;
-	border-bottom: solid 1px #f78;
-}
-
-.blockquote1 {
-	border-top: solid 1px #cc208e;
-	border-bottom: solid 1px #cc208e;
-}
-
-.blockquote h2,
-.blockquote1 h2 {
-	position: relative;
-	color: #000;
-	font-size: 22px;
-	font-weight: 600;
-	line-height: 2rem;
-	margin: 0;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-.typetexts,
-.typetexts1 {
-	white-space: nowrap;
-	overflow: hidden;
-	animation: typing 2s linear;
-}
-
-.typetext,
-.typetext1 {
-	white-space: nowrap;
-	overflow: hidden;
-	animation: typingAnnex 2s;
-	animation-delay: 0s;
-}
-
-.blockquote:after,
-.blockquote1:after {
-	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-	position: absolute;
-	content: "”";
-	color: salmon;
-	font-size: 10rem;
-	line-height: 0;
-	bottom: -43px;
-	right: -7px;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-.blockquote1:after {
-	color: #980369;
-}
-
-.blockquote p,
-.blockquote1 p {
-	position: relative;
-	color: #000;
-	font-size: 1rem;
-	font-weight: bold;
-	line-height: 1;
-	margin: 0;
-	padding-top: 20px;
-	z-index: 1;
-}
-
-@keyframes typing {
-	from {
-		width: 0;
-	}
-	to {
-		width: 100%;
-	}
-}
-
-
-@keyframes typingAnnex {
-	from {
-		width: 0;
-	}
-	to {
-		width: 100%;
-	}
-}
-
-
-.form-wrapper__content {
-	margin: 25px auto;
-}
-
-.form,
-.form1 {
-	position: relative;
-	width: 100%;
-	background: transparent;
-	height: 45px;
-	list-style: none;
-	transition: all .3s;
-}
-
-.form1 {
-	height: 55px;
-}
-
-.search-input,
-.search-input1 {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	font-size: 1em;
-	border-radius: 25px;
-	border: 2px transparent;
-	padding: 0px 45px 0px 20px;
-	outline: none;
-	overflow: hidden;
-	white-space: nowrap;
-	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.09);
-	background: #fff;
-	transition: all .3s;
-	z-index: 999;
-}
-
-.search-input1 {
-	border-radius: 4px;
-	padding: 0px 60px 0px 20px;
-}
-
-.search-input:focus,
-.search-input1:focus {
-	border: 1px solid #f78;
-	transition: all .3s;
-}
-
-.search-input::-webkit-input-placeholder {
-	color: #000;
-	position: relative;
-	font-size: .9em;
-	letter-spacing: 0.01em;
-}
-
-.btn,
-.btn1,
-.btn-search {
-	position: absolute;
-	top: 12%;
-	right: 1%;
-	width: 35px;
-	height: 35px;
-	border: 1px solid transparent;
-	border-radius: 50%;
-	cursor: pointer;
-	outline: none;
-	box-shadow: 1px 7px 14px -9px rgb(254, 102, 125);
-	background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-	z-index: 99999;
-}
-
-.btn-search {
-	top: 15%;
-	width: 40px;
-	height: 40px;
-}
-
-.btn1 {
-	box-shadow: 1px 7px 14px -9px#cc208e;
-	background-image: linear-gradient(to top, #cc208e 0%, #980369 100%);
-}
-
-.query {
-	padding: 10px;
-	margin: 15px;
-	border-radius: 5px;
-	font-size: 20px;
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	align-items: center;
-	letter-spacing: 0.2rem;
-	box-shadow: 0 10px 20px rgb(0 0 0 / 9%);
-	background-color: hsla(0, 0%, 100%, .6);
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	z-index: 9999;
-}
-
-
-@media screen and (max-width: 540px) {
-	.form-wrapper {
-		width: 100%;
-		padding: initial;
-	}
-
-	.form-wrapper__content {
-		margin: -30px auto;
-	}
-
-	.form1 {
-		height: 45px;
-	}
-
-	.result-indicator {
-		width: 95%;
-	}
-
-	.search-input1 {
-		padding: 0px 45px 0px 20px;
-	}
-
-	.btn-search {
-		top: 12%;
-		width: 35px;
-		height: 35px;
-	}
-
-	.blockquote h2,
-	.blockquote1 h2 {
-		line-height: inherit;
-		font-size: 14px;
-	}
-
-	.typetext {
-		font-size: 14px;
-	}
-
-	.blockquote,
-	.blockquote1 {
-		border-top: none;
-		margin: 60px auto;
-	}
-
-	.blockquote:after,
-	.blockquote1:after {
-		color: salmon;
-		font-size: 5rem;
-		bottom: 30px;
-		right: -6px;
-	}
-
-	.blockquote1:after {
-		color: #980369;
-	}
-
-	.query {
-		margin: 15px auto;
-		border-radius: 4px;
-	}
-
-	.blockquote h4,
-	.blockquote1 h4 {
-		padding-top: 10px;
-	}
-}
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-	.nav-wrapper {
-		left: 2%;
-		width: 100%;
-	}
-
-	.form-wrapper {
-		padding-left: 20px;
-	}
-
-	.blockquote,
-	.blockquote1 {
-		border-top: none;
-		margin: 45px auto;
-	}
-
-	.typetext,
-	.blockquote h2 {
-		font-size: 16px;
-	}
-
-	.blockquote:after,
-	.blockquote1:after {
-		color: salmon;
-		font-size: 5rem;
-		bottom: 30px;
-		right: -10px;
-	}
-
-	.blockquote1:after {
-		color: #980369;
-	}
-
-	.blockquote h4,
-	.blockquote1 h4 {
-		padding-top: 0px;
-	}
-
-	.query {
-		width: 95%;
-		margin: 15px auto;
-	}
-
-	.form-wrapper__content {
-		margin: -25px auto;
-	}
-
-	.form1 {
-		height: 45px;
-	}
-
-	.search-input1 {
-		padding: 0px 45px 0px 20px;
-	}
-
-	.btn-search {
-		top: 12%;
-		width: 35px;
-		height: 35px;
-	}
-}
-
-@media screen and (min-width: 781px) and (max-width: 1200px) {
-	.typetext,
-	.blockquote h2 {
-		font-size: 19px;
-	}
-}
+.form-wrapper{width:57%;padding-left:80px}.blockquote,.blockquote1{position:relative;display:block;font-family:'Montserrat',sans-serif;font-weight:600;color:#fff;padding:30px 0;padding:15px 0;width:100%;z-index:1;margin:81px auto;align-self:center;border-top:solid 1px #f78;border-bottom:solid 1px #f78}.blockquote1{border-top:solid 1px #cc208e;border-bottom:solid 1px #cc208e}.blockquote h2, .blockquote1 h2{position:relative;color:#000;font-size:22px;font-weight:600;line-height:2rem;margin:0;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.typetexts,.typetexts1{white-space:nowrap;overflow:hidden;animation:typing 2s linear}.typetext,.typetext1{white-space:nowrap;overflow:hidden;animation:typingAnnex 2s;animation-delay:0s}.blockquote:after,.blockquote1:after{font-family:'Trebuchet MS','Lucida Sans Unicode','Lucida Grande','Lucida Sans',Arial,sans-serif;position:absolute;content:"”";color:salmon;font-size:10rem;line-height:0;bottom:-43px;right:-7px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.blockquote1:after{color:#980369}.blockquote p, .blockquote1 p{position:relative;color:#000;font-size:1rem;font-weight:bold;line-height:1;margin:0;padding-top:20px;z-index:1}@keyframes typing{from{width:0}to{width:100%}}@keyframes typingAnnex{from{width:0}to{width:100%}}.form-wrapper__content{margin:25px auto}.form,.form1{position:relative;width:100%;background:transparent;height:45px;list-style:none;transition:all .3s}.form1{height:55px}.search-input,.search-input1{position:relative;width:100%;height:100%;font-size:1em;border-radius:25px;border:2px transparent;padding:0px 45px 0px 20px;outline:none;overflow:hidden;white-space:nowrap;box-shadow:0px 10px 20px rgba(0, 0, 0, 0.09);background:#fff;transition:all .3s;z-index:999}.search-input1{border-radius:4px;padding:0px 60px 0px 20px}.search-input:focus,.search-input1:focus{border:1px solid #f78;transition:all .3s}.search-input::-webkit-input-placeholder{color:#000;position:relative;font-size: .9em;letter-spacing:0.01em}.btn,.btn1,.btn-search{position:absolute;top:12%;right:1%;width:35px;height:35px;border:1px solid transparent;border-radius:50%;cursor:pointer;outline:none;box-shadow:1px 7px 14px -9px rgb(254, 102, 125);background:linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);display:flex;justify-content:center;align-items:center;color:#fff;z-index:99999}.btn-search{top:15%;width:40px;height:40px}.btn1{box-shadow:1px 7px 14px -9px#cc208e;background-image:linear-gradient(to top, #cc208e 0%, #980369 100%)}.query{padding:10px;margin:15px;border-radius:5px;font-size:20px;display:flex;justify-content:center;text-align:center;align-items:center;letter-spacing:0.2rem;box-shadow:0 10px 20px rgb(0 0 0 / 9%);background-color:hsla(0, 0%, 100%, .6);text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);z-index:9999}@media screen and (max-width: 540px){.form-wrapper{width:100%;padding:initial}.form-wrapper__content{margin:-30px auto}.form1{height:45px}.result-indicator{width:95%}.search-input1{padding:0px 45px 0px 20px}.btn-search{top:12%;width:35px;height:35px}.blockquote h2, .blockquote1 h2{line-height:inherit;font-size:14px}.typetext{font-size:14px}.blockquote,.blockquote1{border-top:none;margin:60px auto}.blockquote:after,.blockquote1:after{color:salmon;font-size:5rem;bottom:30px;right:-6px}.blockquote1:after{color:#980369}.query{margin:15px auto;border-radius:4px}.blockquote h4, .blockquote1 h4{padding-top:10px}}@media screen and (min-width: 540px) and (max-width: 780px){.nav-wrapper{left:2%;width:100%}.form-wrapper{padding-left:20px}.blockquote,.blockquote1{border-top:none;margin:45px auto}.typetext, .blockquote h2{font-size:16px}.blockquote:after,.blockquote1:after{color:salmon;font-size:5rem;bottom:30px;right:-10px}.blockquote1:after{color:#980369}.blockquote h4, .blockquote1 h4{padding-top:0px}.query{width:95%;margin:15px auto}.form-wrapper__content{margin:-25px auto}.form1{height:45px}.search-input1{padding:0px 45px 0px 20px}.btn-search{top:12%;width:35px;height:35px}}@media screen and (min-width: 781px) and (max-width: 1200px){.typetext, .blockquote h2{font-size:19px}}
