--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,314 +1,1 @@
-.food-list__cardwrapper,
-.randomgenerator-cardwrapper {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	grid-gap: 2.5rem;
-	gap: 2.5rem;
-	padding: 5px 15px;
-	background-color: lavender;
-}
-
-.search-input__wrapper {
-	position: relative;
-	width: 100%;
-	min-height: 300px;
-	padding: 0px 70px;
-	margin: 25px auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border-radius: 10px;
-	background-color: lavender;
-	background-position: left;
-	background-size: cover;
-	background-repeat: no-repeat;
-	box-shadow: 0px 10px 20px rgb(0 0 0 / 9%);
-	animation: fade .5s;
-	transition: all .5s;
-}
-
-.result-indicator {
-	width: 100%;
-	margin: 25px auto;
-}
-
-.randomgenerator-content {
-	position: relative;
-	width: 100%;
-	margin: 15px 0px;
-	border-radius: 10px;
-}
-
-.randomgenerator-content h1 {
-	padding: 15px;
-}
-
-.randomgenerator-cardwrapper {
-	background-color: transparent;
-}
-
-.alcohol-caption {
-	position: relative;
-	padding: .75em 1.9em;
-}
-
-.alcohol-caption::before {
-	position: absolute;
-	content: "";
-	height: 2px;
-	width: 100px;
-	top: 60px;
-	left: 48px;
-	background: #c62d1f;
-}
-
-.food-list__card {
-	position: relative;
-	width: 21%;
-	border-radius: 5px;
-	transition: all .5s;
-	list-style: none;
-	animation: verticalSlide .5s;
-}
-
-ul.food-list__favcard {
-	position: relative;
-	width: 16%;
-	border-radius: 5px;
-	transition: all .3s;
-	list-style: none;
-}
-
-.food-list__poster {
-	width: 100%;
-	padding-bottom: 100%;
-	overflow: hidden;
-	display: block;
-	position: relative;
-	border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-}
-
-.food-list__poster img {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.optional-image {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.title-discover {
-	padding: 10px;
-	box-shadow: 0 3px 6px rgba(0, 0, 0, .20);
-	border-bottom-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	background-color: hsla(0, 0%, 100%, .21);
-}
-
-.title {
-	text-align: center;
-	text-transform: capitalize;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-.btn-discover,
-.btn-discover1 {
-	width: 100%;
-	font-size: 17px;
-	margin: 8px 0px 0px;
-	line-height: 2rem;
-	cursor: pointer;
-	outline: none;
-	border: 1px solid salmon;
-	color: #fff;
-	border-radius: 25px;
-	background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
-	text-decoration: none;
-	box-shadow: 0px 10px 14px -7px rgb(254, 102, 125);
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	transition: all .2s;
-}
-
-.btn-discover1 {
-	color: #61045f;
-	background: transparent;
-	border-color: #61045f;
-	box-shadow: 0px 10px 14px -13px #cc208e;
-}
-
-.btn-discover:hover {
-	color: #ffffff;
-	box-shadow: 0px 0px 5px #fff;
-}
-
-.btn-discover1:hover {
-	box-shadow: 0px 0px 5px #fff;
-}
-
-.pagination {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-}
-
-.pagination-next,
-.pagination-previous {
-	padding: 0 .75em;
-	margin-left: .75em;
-	white-space: nowrap;
-	border: 2px solid #61045f;
-	border-radius: 3px;
-	text-decoration: none;
-	color: #61045f;
-	transition: all .3s;
-}
-
-.pagination-next:hover,
-.pagination-previous:hover {
-	border-color: red;
-	color: red;
-	transition: all .3s;
-}
-
-.pagination-list {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	text-align: center;
-}
-
-.pagination-link {
-	min-width: 2.5em;
-	border-radius: 3px;
-	color: #61045f;
-	border: 2px solid #61045f;
-	padding: 0 0.5em;
-	margin: 0 0.25rem;
-	transition: all .3s;
-	text-decoration: none;
-}
-
-.pagination-link:hover {
-	border-color: red;
-	color: red;
-	transition: all .3s;
-}
-
-.pagination-link__active {
-	min-width: 2.5em;
-	border-radius: 3px;
-	color: #fff;
-	background-color: red;
-	border: 2px solid red;
-	padding: 0 0.75em;
-	margin: 0 0.25rem;
-	text-decoration: none;
-}
-
-.pagination-ellipsis {
-	font-size: 1em;
-	justify-content: center;
-	margin: .25rem;
-	padding: 0 .5em;
-	text-align: center;
-}
-
-@media screen and (max-width: 540px) {
-	.randomgenerator-content h1 {
-		font-size: 28px;
-	}
-
-	.food-list__cardwrapper,
-	.randomgenerator-cardwrapper {
-		grid-gap: 0.8rem;
-		gap: 0.8rem;
-		padding: 0px 5px;
-	}
-
-	.food-list__card {
-		width: 47%;
-	}
-
-	.alcohol-caption {
-		padding: .75em;
-		font-size: 20px;
-	}
-
-	.alcohol-caption::before {
-		left: 16px;
-	}
-
-	.btn-discover,
-	.btn-discover1 {
-		font-size: 16px;
-		line-height: 1.5rem;
-	}
-
-	.pagination {
-		justify-content: center;
-		margin: 0.75em;
-	}
-
-	.pagination-link,
-	.pagination-link__active {
-		padding: 0 0.5em;
-		margin: 0 0.2rem;
-	}
-
-	.nextprev {
-		display: flex;
-		justify-content: center;
-	}
-
-	.pagination-next,
-	.pagination-previous {
-		padding: 0 .5em;
-		margin-left: .6em;
-	}
-
-	.pagination-ellipsis {
-		margin: 0;
-		padding: 0 .2em;
-	}
-
-	.search-input__wrapper {
-		width: 95%;
-		height: calc(677px - 113px);
-		padding: 5px;
-		margin: auto;
-	}
-}
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-	.food-list__card {
-		width: 20%;
-	}
-
-	.alcohol-caption {
-		padding: .75em 1em;
-	}
-
-	.alcohol-caption::before {
-		left: 25px;
-	}
-
-	.search-input__wrapper {
-		width: 95%;
-		margin: auto;
-	}
-}
+.food-list__cardwrapper,.randomgenerator-cardwrapper{width:100%;display:flex;flex-wrap:wrap;justify-content:center;grid-gap:2.5rem;gap:2.5rem;padding:5px 15px;background-color:lavender}.search-input__wrapper{position:relative;width:100%;min-height:300px;padding:0px 70px;margin:25px auto;display:flex;flex-direction:column;align-items:center;justify-content:center;border-radius:10px;background-color:lavender;background-position:left;background-size:cover;background-repeat:no-repeat;box-shadow:0px 10px 20px rgb(0 0 0 / 9%);animation:fade .5s;transition:all .5s}.result-indicator{width:100%;margin:25px auto}.randomgenerator-content{position:relative;width:100%;margin:15px 0px;border-radius:10px}.randomgenerator-content h1{padding:15px}.randomgenerator-cardwrapper{background-color:transparent}.alcohol-caption{position:relative;padding: .75em 1.9em}.alcohol-caption::before{position:absolute;content:"";height:2px;width:100px;top:60px;left:48px;background:#c62d1f}.food-list__card{position:relative;width:21%;border-radius:5px;transition:all .5s;list-style:none;animation:verticalSlide .5s}ul.food-list__favcard{position:relative;width:16%;border-radius:5px;transition:all .3s;list-style:none}.food-list__poster{width:100%;overflow:hidden;display:block;position:relative;border-top-right-radius:5px;border-top-left-radius:5px}.food-list__poster img{display:block;margin:0 auto;max-width:100%;width:100%;height:100%}.optional-image{width:100%;min-height:100%;position:absolute;left:0;top:0}.title-discover{padding:10px;border-bottom-right-radius:25px;border-bottom-left-radius:25px;box-shadow:0 10px 20px rgba(0,0,0,.09);background-color:hsla(0,0%,100%,.21)}.title-discover1{padding:10px;text-align:center;background-color:#fff;border-bottom-right-radius:10px;border-bottom-left-radius:10px;box-shadow:0 10px 20px rgba(0,0,0,.09)}.title{text-align:center;text-transform:capitalize;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.btn-discover,.btn-discover1{width:100%;font-size:17px;margin:8px 0px 0px;line-height:2rem;cursor:pointer;outline:none;border:1px solid salmon;color:#fff;border-radius:25px;background:linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);text-decoration:none;box-shadow:0px 10px 14px -7px rgb(254, 102, 125);text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);transition:all .2s}.btn-discover1{color:#61045f;background:transparent;border-color:#61045f;box-shadow:0px 10px 14px -13px #cc208e}.btn-discover:hover{color:#fff;box-shadow:0px 0px 5px #fff}.btn-discover1:hover{box-shadow:0px 0px 5px #fff}.pagination{width:100%;display:flex;justify-content:space-between}.pagination-next,.pagination-previous{padding:0 .75em;margin-left: .75em;white-space:nowrap;border:2px solid #61045f;border-radius:3px;text-decoration:none;color:#61045f;transition:all .3s}.pagination-next:hover,.pagination-previous:hover{border-color:red;color:red;transition:all .3s}.pagination-list{align-items:center;display:flex;justify-content:center;text-align:center}.pagination-link{min-width:2.5em;border-radius:3px;color:#61045f;border:2px solid #61045f;padding:0 0.5em;margin:0 0.25rem;transition:all .3s;text-decoration:none}.pagination-link:hover{border-color:red;color:red;transition:all .3s}.pagination-link__active{min-width:2.5em;border-radius:3px;color:#fff;background-color:red;border:2px solid red;padding:0 0.75em;margin:0 0.25rem;text-decoration:none}.pagination-ellipsis{font-size:1em;justify-content:center;margin: .25rem;padding:0 .5em;text-align:center}@media screen and (max-width: 540px){.randomgenerator-content h1{font-size:28px}.food-list__cardwrapper,.randomgenerator-cardwrapper{grid-gap:0.8rem;gap:0.8rem;padding:0px 5px}.food-list__card{width:47%}.alcohol-caption{padding: .75em;font-size:20px}.alcohol-caption::before{left:16px}.btn-discover,.btn-discover1{font-size:16px;line-height:1.5rem}.pagination{justify-content:center;margin:0.75em}.pagination-link,.pagination-link__active{padding:0 0.5em;margin:0 0.2rem}.nextprev{display:flex;justify-content:center}.pagination-next,.pagination-previous{padding:0 .5em;margin-left: .6em}.pagination-ellipsis{margin:0;padding:0 .2em}.search-input__wrapper{width:95%;height:calc(677px - 113px);padding:5px;margin:auto}}@media screen and (min-width: 540px) and (max-width: 780px){.food-list__card{width:20%}.alcohol-caption{padding: .75em 1em}.alcohol-caption::before{left:25px}.search-input__wrapper{width:95%;margin:auto}}
