--- a/src/styles/showfood.css
+++ b/src/styles/showfood.css
@@ -1,544 +1,1 @@
-.food-wrapper,
-.food-wrapper1 {
-	position: relative;
-	width: 100%;
-	padding: 15px;
-	margin-top: 30px;
-	display: flex;
-	flex-direction: column;
-	background-color: lavender;
-	animation: fade 1s;
-}
-
-.food-wrapper1 {
-	padding: 15px 150px;
-}
-
-.food-header__content {
-	display: flex;
-	width: 100%;
-}
-
-.food-img__container {
-	position: relative;
-	width: 50%;
-	padding-bottom: 36%;
-	overflow: hidden;
-	display: block;
-	border-radius: 10px;
-}
-
-.drink-img__container {
-	position: relative;
-	width: 40%;
-	height: 0;
-	padding-bottom: 30%;
-	overflow: hidden;
-	display: block;
-	border-radius: 10px;
-}
-
-.food-img__container img {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.drink-img__container img {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.optional-image {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.btn-navigate__back,
-.btn-navigate__back1 {
-	position: absolute;
-	right: 1%;
-	bottom: 100%;
-	width: 35px;
-	height: 35px;
-	font-size: 17px;
-	line-height: 1.5rem;
-	cursor: pointer;
-	outline: none;
-	border: 2px solid #f78;
-	color: #f78;
-	border-radius: 50%;
-	text-decoration: none;
-	box-shadow: 0px 10px 14px -10px rgb(254, 102, 125);
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	background-color: transparent;
-	transition: all .2s;
-	z-index: 8;
-}
-
-.btn-navigate__back1 {
-	right: 0%;
-	bottom: 94%;
-	border: 2px solid #61045f;
-	color: #61045f;
-	border-radius: 50%;
-	text-decoration: none;
-	box-shadow: 0px 10px 14px -10px #61045f;
-}
-
-.btn-navigate__back:hover,
-.btn-navigate__back1:hover {
-	box-shadow: 0px 0px 5px #fff;
-	color: #ffffff;
-	border-color: #fff;
-}
-
-.btn-store__active {
-	cursor: pointer;
-	outline: none;
-	width: 35px;
-	height: 35px;
-	border: 1px solid transparent;
-	border-radius: 50%;
-	box-shadow: 1px 7px 14px -4px #001;
-	padding-top: 5px;
-	transition: all .4s;
-}
-
-.btn-store,
-.btn-store1 {
-	cursor: pointer;
-	outline: none;
-	width: 35px;
-	height: 35px;
-	border: 1px solid transparent;
-	border-radius: 50%;
-	box-shadow: 1px 7px 14px -7px #001;
-	background-image: linear-gradient(rgb(254, 102, 125), rgb(255, 163, 117));
-	padding-top: 5px;
-	transition: all .4s;
-}
-
-.btn-store1 {
-	background-image: linear-gradient(to top, #61045f 0%, #980369 100%);
-}
-
-.btn-store__active:hover,
-.btn-store:hover,
-.btn-store1:hover {
-	box-shadow: none;
-}
-
-.food-header__details {
-	position: absolute;
-	max-width: 100%;
-	top: 60px;
-	left: 0px;
-	padding: 10px;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	background-color: hsla(0, 0%, 100%, .21);
-}
-
-.food-header__title {
-	font-size: smaller;
-	color: #fff;
-	text-shadow: 0 3px 6px #663939;
-}
-
-.food-details {
-	width: 60%;
-}
-
-.category-favorite {
-	width: 100%;
-	padding: 5px 0px 6px 0px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.food-category,
-.food-favorite {
-	display: block;
-	padding-top: 6px;
-}
-
-.food-category h3,
-.drink-category h3 {
-	color: red;
-	margin-right: 20px;
-}
-
-.drink-category h3 {
-	color: #61045f;
-	padding: 7px 0px 0px;
-}
-
-.food__details {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
-.food-details__ingredients,
-.drink-details__ingredients {
-	position: relative;
-	width: 50%;
-	padding: 15px 15px;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-	transition: all .3s;
-	z-index: 99;
-}
-
-.food-details__list {
-	width: 100%;
-	padding: 10px;
-}
-
-.food-details__ingredients ul li {
-	list-style: square;
-}
-
-figure {
-	text-align: center;
-	animation: 1s btnzoom;
-	transition: all.3s;
-}
-
-figure:hover img {
-	transition: all.3s;
-	transform: scale(1.1);
-}
-
-.thumbnailTitleCard-wrapper {
-	width: 100%;
-	color: #61045f;
-	padding: 10px;
-	margin: 25px 0px;
-	border-radius: 10px;
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	transition: all .3s;
-}
-
-.thumbnailTitle-content {
-	width: 100%;
-	gap: 1rem;
-	padding: 10px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	background-color: transparent;
-	transition: all .3s;
-}
-
-.food-details__ingredients::before {
-	position: absolute;
-	content: "";
-	width: 55%;
-	height: 100%;
-	top: 0;
-	right: 0;
-	background-image: url(../image/ingredient.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-	transition: all .3s;
-	z-index: -1;
-}
-
-.food-ingredients,
-.drink-ingredients {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	padding: 0px 25px;
-	border-radius: 10px;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	background-color: hsla(0, 0%, 100%, .61);
-	z-index: 99;
-}
-
-.drink-ingredients::before {
-	content: "";
-	position: absolute;
-	width: 55%;
-	height: 90%;
-	bottom: 0;
-	right: 0;
-	background-image: url(../image/drinkcock.jpg);
-	background-repeat: no-repeat;
-	background-position: top;
-	background-size: cover;
-	border-top-left-radius: 100%;
-	z-index: -1;
-}
-
-.food-ingredients h2,
-.drink-ingredients h2 {
-	padding-top: 10px;
-	color: red;
-	text-shadow: 0 1px 2px #663939;
-}
-
-.drink-ingredients h2 {
-	color: #61045f;
-}
-
-.food-details__list li {
-	padding-bottom: 6px;
-	list-style: square;
-}
-
-.food-details__instructions,
-.food-details__instructions1 {
-	width: 100%;
-	margin: 20px 0px;
-	border-radius: 4px;
-	list-style: square;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-.food-details__instructions h2 {
-	margin-bottom: 15px;
-	color: red;
-	text-shadow: 0 1px 2px #663939;
-}
-
-.food-details__instructions1 h2 {
-	color: #61045f;
-}
-
-.food-details__instructions li,
-.food-details__instructions1 li {
-	padding: 10px;
-}
-
-.btn-show__details {
-	font-family: inherit;
-	font-size: 16px;
-	width: 6%;
-	position: absolute;
-	bottom: 102.2%;
-	left: 48%;
-	outline: none;
-	line-height: 1.5rem;
-	border: 2px solid red;
-	color: red;
-	border-radius: 4px;
-	text-decoration: none;
-	box-shadow: 0px 10px 14px -13px rgb(254, 102, 125);
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	text-shadow: initial;
-	transition: all .3s;
-	display: none;
-}
-
-.video-container {
-	width: 100%;
-}
-
-.video-container h2 {
-	margin-bottom: 15px;
-	color: red;
-	text-shadow: 0 1px 2px #663939;
-}
-
-.video-wrapper {
-	position: relative;
-	padding-bottom: 40.25%;
-	padding-top: 15px;
-	height: 0;
-	overflow: hidden;
-}
-
-.youtube-frame {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-.ingredient-front__wrapper {
-	position: relative;
-	width: 100%;
-	padding: 20px;
-	border-radius: 10px;
-	margin: 25px 0px;
-	box-shadow: 0px 10px 20px rgb(0 0 0 / 9%);
-	background-color: #fff;
-}
-
-.ingredient-front__wrapper h1 {
-	margin: 10px 0px 25px;
-}
-
-.ingredient-front__content {
-	width: 100%;
-	padding: 10px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	gap: 1.3rem;
-	transition: all .3s;
-}
-
-.thumbnailCard {
-	width: 100px;
-	height: auto;
-	cursor: pointer;
-	transition: all .3s;
-	animation: .3s btnzoom1;
-}
-
-
-.thumbnailCard:hover .thumbnail-plate img {
-	transform: scale(1.3);
-	transition: all .3s;
-}
-
-.thumbnailCard:hover .thumbnail-plate1 img {
-	transform: scale(1.3);
-	transition: all .3s;
-}
-
-.thumbnail-plate,
-.thumbnail-plate1,
-.thumbnail-plate2 {
-	position: relative;
-	text-align: center;
-    margin-bottom: 10px;
-    background-color: transparent;
-    transition: all .3s;
-}
-
-.thumbnail-plate img,
-.thumbnail-plate1 img,
-.thumbnail-plate2 img{
-	width: 100px;
-	height: 100px;
-	object-fit: cover;
-	object-position: bottom;
-	transition: all .3s;
-}
-
-.thumbnail-plate2 {
-	width: 100px;
-	border-radius: 4px;
-	background-image: none;
-	border: 1px solid #9fa8da;
-	box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-}
-
-.load-ingredient,
-.load-ingredient1 {
-	width: 300px;
-	padding: 4px;
-	text-align: center;
-	border: 2px solid #ff5550;
-	color: #ff5550;
-	border-radius: 5px;
-	box-shadow: 0px 10px 14px -14px rgb(254 102 67);
-	text-shadow: 0 3px 50px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	background-color: transparent;
-	transition: all .2s;
-	margin: 30px 0px 15px auto;
-	text-shadow: 0px 0px 0px #ff5550;
-	cursor: pointer;
-	transition: all .3s;
-}
-
-.load-ingredient1 {
-	color: #c29;
-	border-color: #c29;
-	box-shadow: 0px 10px 14px -10px#980369;
-}
-
-.load-ingredient:hover,
-.load-ingredient1:hover {
-	color: initial;
-	border-color: initial;
-	box-shadow: none;
-	transition: all .3s;
-}
-
-.food-wrapper1 {
-	width: 100%;
-	padding: initial;
-}
-
-.food-header__content1 {
-	width: 100%;
-}
-
-.single-detail__wrapper img {
-	float: left;
-	width: 30%;
-	z-index: 99;
-}
-
-.single-detail__wrapper {
-	position: relative;
-	padding: 25px;
-	line-height: 1.8rem;
-	border-radius: 10px;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-	background-color: #fff;
-	box-shadow: 0px 10px 20px rgb(0 0 0 / 9%);
-	transition: all .3s;
-	float: none;
-	z-index: 1;
-}
-
-.single-ingredient h2 {
-	padding-bottom: 10px;
-}
-
-.hide {
-	transform: scale(0);
-	display: none;
-}
-
-.loadmore-btn {
-	width: 100%;
-	padding: 5px;
-	margin-top: 15px;
-	letter-spacing: .1em;
-	font-family: 'Montserrat', sans-serif;
-	font-size: inherit;
-	font-size: 1.2em;
-	font-weight: 500;
-	color: #551a8b;
-	outline: none;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	transform-origin: bottom;
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	background-color: #cbcbec;
-	box-shadow: 0px 10px 20px rgb(0 0 0 / 9%);
-	transition: all .6s;
-}
-
-.loadmore-btn:hover {
-	color: #fff;
-	transition: .6s;
-	letter-spacing: .3em;
-	background-color: #fe8679;
-}
+.food-wrapper,.food-wrapper1{position:relative;width:100%;padding:15px;margin-top:30px;display:flex;flex-direction:column;background-color:lavender;animation:fade 1s}.food-wrapper1{padding:15px 150px}.food-header__content{display:flex;width:100%}.food-img__container{position:relative;width:50%;padding-bottom:36%;overflow:hidden;display:block;border-radius:10px}.drink-img__container{position:relative;width:40%;height:0;padding-bottom:30%;overflow:hidden;display:block;border-radius:10px}.food-img__container img{width:100%;height:100%;position:absolute;left:0;top:0}.drink-img__container img{width:100%;height:100%;position:absolute;left:0;top:0}.optional-image{width:100%;min-height:100%;position:absolute;left:0;top:0}.btn-navigate__back,.btn-navigate__back1{position:absolute;right:1%;bottom:100%;width:35px;height:35px;font-size:17px;line-height:1.5rem;cursor:pointer;outline:none;border:2px solid #f78;color:#f78;border-radius:50%;text-decoration:none;box-shadow:0px 10px 14px -10px rgb(254, 102, 125);text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);background-color:transparent;transition:all .2s;z-index:8}.btn-navigate__back1{right:0%;bottom:94%;border:2px solid #61045f;color:#61045f;border-radius:50%;text-decoration:none;box-shadow:0px 10px 14px -10px #61045f}.btn-navigate__back:hover,.btn-navigate__back1:hover{box-shadow:0px 0px 5px #fff;color:#fff;border-color:#fff}.btn-store__active{cursor:pointer;outline:none;width:35px;height:35px;border:1px solid transparent;border-radius:50%;box-shadow:1px 7px 14px -4px #001;padding-top:5px;transition:all .4s}.btn-store,.btn-store1{cursor:pointer;outline:none;width:35px;height:35px;border:1px solid transparent;border-radius:50%;box-shadow:1px 7px 14px -7px #001;background-image:linear-gradient(rgb(254, 102, 125), rgb(255, 163, 117));padding-top:5px;transition:all .4s}.btn-store1{background-image:linear-gradient(to top, #61045f 0%, #980369 100%)}.btn-store__active:hover,.btn-store:hover,.btn-store1:hover{box-shadow:none}.food-header__details{position:absolute;max-width:100%;top:60px;left:0px;padding:10px;border-top-right-radius:10px;border-bottom-right-radius:10px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);box-shadow:0 10px 20px rgba(0,0,0,.09);background-color:hsla(0,0%,100%,.21)}.food-header__title{font-size:smaller;color:#fff;text-shadow:0 3px 6px #663939}.food-details{width:60%}.category-favorite{width:100%;padding:5px 0px 6px 0px;display:flex;flex-wrap:wrap;justify-content:space-between}.food-category,.food-favorite{display:block;padding-top:6px}.food-category h3, .drink-category h3{color:red;margin-right:20px}.drink-category h3{color:#61045f;padding:7px 0px 0px}.food__details{width:100%;display:flex;flex-direction:column}.food-details__ingredients,.drink-details__ingredients{position:relative;width:50%;padding:15px 15px;border-top-right-radius:10px;border-bottom-right-radius:10px;transition:all .3s;z-index:99}.food-details__list{width:100%;padding:10px}.food-details__ingredients ul li{list-style:square}figure{text-align:center;animation:1s btnzoom;transition:all.3s}figure:hover img{transition:all.3s;transform:scale(1.1)}.thumbnailTitleCard-wrapper{width:100%;color:#61045f;padding:10px;margin:25px 0px;border-radius:10px;text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);transition:all .3s}.thumbnailTitle-content{width:100%;gap:1rem;padding:10px;display:flex;flex-wrap:wrap;justify-content:space-evenly;background-color:transparent;transition:all .3s}.food-details__ingredients::before{position:absolute;content:"";width:55%;height:100%;top:0;right:0;background-image:url(../image/ingredient.webp);background-repeat:no-repeat;background-position:center;background-size:cover;border-top-right-radius:10px;border-bottom-right-radius:10px;transition:all .3s;z-index:-1}.food-ingredients,.drink-ingredients{position:relative;width:100%;height:100%;padding:0px 25px;border-radius:10px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);box-shadow:0 10px 20px rgba(0,0,0,.09);background-color:hsla(0,0%,100%,.61);z-index:99}.drink-ingredients::before{content:"";position:absolute;width:55%;height:90%;bottom:0;right:0;background-image:url(../image/drinkcock.webp);background-repeat:no-repeat;background-position:top;background-size:cover;border-top-left-radius:100%;z-index:-1}.food-ingredients h2, .drink-ingredients h2{padding-top:10px;color:red;text-shadow:0 1px 2px #663939}.drink-ingredients h2{color:#61045f}.food-details__list li{padding-bottom:6px;list-style:square}.food-details__instructions,.food-details__instructions1{width:100%;margin:20px 0px;border-radius:4px;list-style:square;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23)}.food-details__instructions h2{margin-bottom:15px;color:red;text-shadow:0 1px 2px #663939}.food-details__instructions1 h2{color:#61045f}.food-details__instructions li, .food-details__instructions1 li{padding:10px}.btn-show__details{font-family:inherit;font-size:16px;width:6%;position:absolute;bottom:102.2%;left:48%;outline:none;line-height:1.5rem;border:2px solid red;color:red;border-radius:4px;text-decoration:none;box-shadow:0px 10px 14px -13px rgb(254, 102, 125);text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);text-shadow:initial;transition:all .3s;display:none}.video-container{width:100%}.video-container h2{margin-bottom:15px;color:red;text-shadow:0 1px 2px #663939}.video-wrapper{position:relative;padding-bottom:40.25%;padding-top:15px;height:0;overflow:hidden}.youtube-frame{position:absolute;top:0;left:0;width:100%;height:100%}.ingredient-front__wrapper{position:relative;width:100%;padding:20px;border-radius:10px;margin:25px 0px;box-shadow:0px 10px 20px rgb(0 0 0 / 9%);background-color:#fff}.ingredient-front__wrapper h1{margin:10px 0px 25px}.ingredient-front__content{width:100%;padding:10px;display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.3rem;transition:all .3s}.thumbnailCard{width:100px;height:auto;cursor:pointer;transition:all .3s;animation: .3s btnzoom1}.thumbnailCard:hover .thumbnail-plate img{transform:scale(1.3);transition:all .3s}.thumbnailCard:hover .thumbnail-plate1 img{transform:scale(1.3);transition:all .3s}.thumbnail-plate,.thumbnail-plate1,.thumbnail-plate2{position:relative;text-align:center;margin-bottom:10px;background-color:transparent;transition:all .3s}.thumbnail-plate img, .thumbnail-plate1 img, .thumbnail-plate2 img{width:100px;height:100px;object-fit:cover;object-position:bottom;transition:all .3s}.thumbnail-plate2{width:100px;border-radius:4px;background-image:none;border:1px solid #9fa8da;box-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%)}.load-ingredient,.load-ingredient1{width:300px;padding:4px;text-align:center;border:2px solid #ff5550;color:#ff5550;border-radius:5px;box-shadow:0px 10px 14px -14px rgb(254 102 67);text-shadow:0 3px 50px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);background-color:transparent;transition:all .2s;margin:30px 0px 15px auto;text-shadow:0px 0px 0px #ff5550;cursor:pointer;transition:all .3s}.load-ingredient1{color:#c29;border-color:#c29;box-shadow:0px 10px 14px -10px#980369}.load-ingredient:hover,.load-ingredient1:hover{color:initial;border-color:initial;box-shadow:none;transition:all .3s}.food-wrapper1{width:100%;padding:initial}.food-header__content1{width:100%}.single-detail__wrapper img{float:left;width:30%;z-index:99}.single-detail__wrapper{position:relative;padding:25px;line-height:1.8rem;border-radius:10px;border-top-right-radius:10px;border-bottom-right-radius:10px;background-color:#fff;box-shadow:0px 10px 20px rgb(0 0 0 / 9%);transition:all .3s;float:none;z-index:1}.single-ingredient h2{padding-bottom:10px}.hide{transform:scale(0);display:none}.loadmore-btn{width:100%;padding:6px;margin-top:15px;letter-spacing: .1em;font-family:'Montserrat',sans-serif;font-size:inherit;font-size:1.2em;font-weight:500;color:#551a8b;outline:none;border:none;border-radius:5px;cursor:pointer;transform-origin:bottom;text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);background-color:#cbcbec;box-shadow:0px 10px 20px rgb(0 0 0 / 9%);transition:all .6s}.loadmore-btn:hover{color:#fff;transition: .6s;letter-spacing: .3em;background-color:#fe8679}
