--- a/src/styles/showfoodqueries.css
+++ b/src/styles/showfoodqueries.css
@@ -1,325 +1,1 @@
-@media screen and (max-width: 540px) {
-	.ingredient-front__wrapper,
-	.category-latest__wrapper {
-		padding: 20px 15px;
-		border-radius: 0px;
-	}
-
-	.thumbnailCard {
-		width: 90px;
-	}
-
-	.latest-wrapper h1 {
-		margin: 0px 0px 20px;
-	}
-
-	.latest-content h1 {
-		margin: 0px 0px 20px;
-	}
-
-	.ingredient-front__wrapper h1,
-	.categorycoc-latest__wrapper h1,
-	.category-latest__wrapper h1 {
-		font-size: 30px;
-	}
-
-	.category-latest__wrapper {
-		flex-direction: column;
-	}
-
-	.categorycoc-front__wrapper {
-		padding: initial;
-	}
-
-
-	.category-front__wrapper,
-	.latest__wrapper {
-		width: 100%;
-		padding: initial;
-	}
-
-
-	.category-front__wrapper {
-		padding: 10px;
-	}
-
-	.category-list__card {
-		width: 47%;
-	}
-
-	.pop-card {
-		width: 47%;
-		margin: initial;
-	}
-
-	.pop-card a {
-		margin: initial;
-	}
-
-	.latest-list__card,
-	.letest__content,
-	.latest-list__card1 {
-		width: 100%;
-	}
-
-	.latest-title__discover {
-		text-align: center;
-		padding: 0px 10px;
-	}
-
-	.latest-list__card1 img {
-		height: 130px;
-	}
-
-	.load-ingredient,
-	.load-ingredient1 {
-		margin: auto;
-		padding: 2px;
-	}
-
-	.loadmore-btn:hover {
-		letter-spacing: initial;
-	}
-
-	.food-wrapper,
-	.food-wrapper1 {
-		padding: 0 15px;
-		margin-top: 0px;
-	}
-
-	.single-detail__wrapper {
-		padding: initial;
-		box-shadow: none;
-	}
-
-	.single-detail__wrapper img {
-		float: none;
-		width: 100%;
-		background-color: lavender;
-	}
-
-	.single-ingredient {
-		padding: 10px;
-	}
-
-	.btn-navigate__back,
-	.btn-navigate__back1 {
-		right: 6%;
-		top: 20px;
-		color: #ffffff;
-		border-color: #fff;
-		box-shadow: 0px 0px 5px #fff;
-	}
-
-	.food-header__content {
-		flex-direction: column;
-	}
-
-	.food-img__container,
-	.drink-img__container {
-		position: relative;
-		width: 100%;
-		padding-bottom: 100%;
-		border-radius: 10px;
-	}
-
-	.food-header__title {
-		font-size: 12px;
-	}
-
-	.food-category h3,
-	.drink-category h3 {
-		color: #000000;
-	}
-
-	.food-details__ingredients::before {
-		display: none;
-	}
-
-	.food-details__ingredients,
-	.drink-details__ingredients {
-		position: relative;
-		width: 100%;
-		border-radius: 10px;
-	}
-
-	.food-details__instructions,
-	.food-details__instructions1 {
-		line-height: 1.8;
-		padding: 10px;
-		margin: auto;
-		box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-		background-color: hsla(0, 0%, 100%, .61);
-		border-radius: 10px;
-		text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	}
-
-	.food-details__instructions1 {
-		margin-bottom: 15px;
-	}
-
-	.food-details__instructions h2,
-	.food-details__instructions1 h2 {
-		margin-bottom: 0px;
-	}
-
-	
-	.video-wrapper {
-		padding-bottom: 73.25%;
-	}
-
-	.video-container {
-		margin: 20px 0px;
-		padding: initial;
-	}
-
-	.background-video__text {
-		top: -9%;
-	}
-
-	.background-video__text1 {
-		top: 25%;
-		font-size: 35px;
-	}
-
-	.background-video__wrapper {
-		width: 95%;
-		height: 85vh;
-		margin: 1px auto;
-	}
-
-	.background-video__content {
-		width: 100%;
-		padding-bottom: initial;
-		overflow: hidden;
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-	}
-
-	.background-video {
-		width: 100%;
-		min-height: 100%;
-		height: auto;
-		object-fit: cover;
-		object-position: bottom;
-	}
-
-	.background-video__overley {
-		position: initial;
-	}
-}
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-	.categorycoc-latest__wrapper {
-		flex-direction: column;
-		padding: 0px 20px;
-	}
-
-	.categorycoc-latest__wrapper h1 {
-		margin: 20px 0px 20px;
-	}
-
-	.category-list__card {
-		width: 46%;
-		padding: 3px;
-	}
-
-	.latest-list__card1 {
-		width: 44%;
-	}
-
-	.pop-card {
-		width: 22%;
-		margin: initial;
-	}
-
-	.latest__wrapper {
-		padding: 10px 0px 10px 5px;
-	}
-
-	.food-wrapper,
-	.food-wrapper1 {
-		padding: 15px;
-	}
-
-	.btn-navigate__back,
-	.btn-navigate__back1 {
-		right: 4%;
-		top: 27px;
-		box-shadow: 0px 0px 5px #fff;
-	}
-
-	.food-header__content {
-		flex-direction: column;
-	}
-
-	.food-category h3,
-	.drink-category h3 {
-		color: #000000;
-	}
-
-	.food-img__container,
-	.drink-img__container {
-		position: relative;
-		width: 100%;
-		padding-bottom: 56.25%;
-		height: 0;
-		overflow: hidden;
-		border-radius: 10px;
-	}
-
-	.food-img__container img {
-		height: 100%;
-	}
-
-	.food-header__title {
-		font-size: 12px;
-	}
-
-	.food-details__ingredients::before {
-		display: none;
-	}
-
-	.food-details__ingredients,
-	.drink-details__ingredients {
-		position: relative;
-		width: 100%;
-		border-radius: 10px;
-	}
-
-	.food-details__instructions,
-	.food-details__instructions1 {
-		line-height: 1.8;
-		padding: 10px;
-		margin: auto;
-		box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-		background-color: hsla(0, 0%, 100%, .61);
-		border-radius: 10px;
-		text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	}
-
-	.food-details__instructions h2,
-	.food-details__instructions1 h2 {
-		margin-bottom: 0px;
-	}
-
-	.video-wrapper {
-		padding-bottom: 48.25%;
-	}
-
-	.video-container {
-		margin: 20px 0px;
-		padding: initial;
-	}
-
-}
-
-@media screen and (min-width: 540px) and (max-width: 888px) {
-	.latest-list__card {
-		width: 47%;
-		margin: 0px;
-	}
-}
+@media screen and (max-width: 540px){.ingredient-front__wrapper,.category-latest__wrapper{padding:20px 15px;border-radius:0px}.thumbnailCard{width:90px}.latest-wrapper h1{margin:0px 0px 20px}.latest-content h1{margin:0px 0px 20px}.ingredient-front__wrapper h1, .categorycoc-latest__wrapper h1, .category-latest__wrapper h1{font-size:30px}.category-latest__wrapper{flex-direction:column}.categorycoc-front__wrapper{padding:initial}.category-front__wrapper,.latest__wrapper{width:100%;padding:initial}.category-front__wrapper{padding:10px}.category-list__card{width:47%}.pop-card{width:47%;margin:initial}.pop-card a{margin:initial}.latest-list__card,.letest__content,.latest-list__card1{width:100%}.latest-title__discover{text-align:center;padding:0px 10px}.latest-list__card1 img{height:130px}.load-ingredient,.load-ingredient1{margin:auto;padding:2px}.loadmore-btn:hover{letter-spacing:initial}.food-wrapper,.food-wrapper1{padding:0 15px;margin-top:0px}.single-detail__wrapper{padding:initial;box-shadow:none}.single-detail__wrapper img{float:none;width:100%;background-color:lavender}.single-ingredient{padding:10px}.btn-navigate__back,.btn-navigate__back1{right:6%;top:20px;color:#fff;border-color:#fff;box-shadow:0px 0px 5px #fff}.food-header__content{flex-direction:column}.food-img__container,.drink-img__container{position:relative;width:100%;padding-bottom:100%;border-radius:10px}.food-header__title{font-size:12px}.food-category h3, .drink-category h3{color:#000}.food-details__ingredients::before{display:none}.food-details__ingredients,.drink-details__ingredients{position:relative;width:100%;border-radius:10px}.food-details__instructions,.food-details__instructions1{line-height:1.8;padding:10px;margin:auto;box-shadow:0 10px 20px rgba(0, 0, 0, .09);background-color:hsla(0, 0%, 100%, .61);border-radius:10px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.food-details__instructions1{margin-bottom:15px}.food-details__instructions h2, .food-details__instructions1 h2{margin-bottom:0px}.video-wrapper{padding-bottom:73.25%}.video-container{margin:20px 0px;padding:initial}.background-video__text{top:-9%}.background-video__text2{top:50px;font-size:50px}.background-video__text{top:0}.background-video__wrapper{width:95%;height:85vh;margin:1px auto}.background-video__content{width:100%;padding-bottom:initial;overflow:hidden;display:block;position:absolute;top:0;left:0;bottom:0}.background-video{width:100%;min-height:100%;height:auto;object-fit:cover;object-position:bottom}.background-video__overley{position:initial}}@media screen and (min-width: 540px) and (max-width: 780px){.categorycoc-latest__wrapper{flex-direction:column;padding:0px 20px}.categorycoc-latest__wrapper h1{margin:20px 0px 20px}.category-list__card{width:46%;padding:3px}.latest-list__card1{width:44%}.pop-card{width:22%;margin:initial}.latest__wrapper{padding:10px 0px 10px 5px}.food-wrapper,.food-wrapper1{padding:15px}.btn-navigate__back,.btn-navigate__back1{right:4%;top:27px;box-shadow:0px 0px 5px #fff}.food-header__content{flex-direction:column}.food-category h3, .drink-category h3{color:#000}.food-img__container,.drink-img__container{position:relative;width:100%;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:10px}.food-img__container img{height:100%}.food-header__title{font-size:12px}.food-details__ingredients::before{display:none}.food-details__ingredients,.drink-details__ingredients{position:relative;width:100%;border-radius:10px}.food-details__instructions,.food-details__instructions1{line-height:1.8;padding:10px;margin:auto;box-shadow:0 10px 20px rgba(0, 0, 0, .09);background-color:hsla(0, 0%, 100%, .61);border-radius:10px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23)}.food-details__instructions h2, .food-details__instructions1 h2{margin-bottom:0px}.video-wrapper{padding-bottom:48.25%}.video-container{margin:20px 0px;padding:initial}}@media screen and (min-width: 540px) and (max-width: 888px){.latest-list__card{width:47%;margin:0px}}
