--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,156 +1,1 @@
-.welcome-wrapper {
-	width: 95%;
-	margin: 3% auto;
-	display: flex;
-	justify-content: center;
-	-webkit-animation: fade 1s;
-	animation: fade 1s;
-	transform: all .3s;
-}
-
-.welcome-text {
-	width: 50%;
-	padding: 50px;
-	font-size: 21px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
-	background-color: whitesmoke;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	transition: all .3s;
-}
-
-.welcome-text h1 {
-	margin: 0.3em;
-	z-index: 8;
-}
-
-.welcome-text h1:nth-child(1) {
-	-webkit-animation: textSlide .5s;
-	animation: textSlide .5s;
-}
-
-.welcome-text h1:nth-child(2) {
-	-webkit-animation: textSlide1 .5s;
-	animation: textSlide1 .5s;
-}
-
-.welcome-text h1:nth-child(3) {
-	-webkit-animation: textSlide .5s;
-	animation: textSlide .5s;
-}
-
-.welcome-text h1:nth-child(4) {
-	color: #551a8b;
-	-webkit-animation: textSlide1 .5s;
-	animation: textSlide1 .5s;
-}
-
-.welcome-text h1:nth-child(5) {
-	-webkit-animation: textSlide2 .5s;
-	animation: textSlide2 .5s;
-}
-
-.btn-welcome {
-	width: 100%;
-	font-family: inherit;
-	font-size: 18px;
-	font-weight: 600;
-	background-color: transparent;
-	cursor: pointer;
-	margin-top: 50px;
-	line-height: 2rem;
-	padding: 0px 10px;
-	text-decoration: none;
-	border: 2px solid #551a8b;
-	border-radius: 5px;
-	color: #551a8b;
-	letter-spacing: .1rem;
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	box-shadow: 0px 10px 14px -13px rgb(160, 102, 254);
-	-webkit-animation: btnzoom .5s;
-	animation: btnzoom .5s;
-}
-
-.btn-welcome:hover {
-	box-shadow: initial;
-}
-
-.welcome-image {
-	width: 50%;
-	background-color: lavender;
-	-webkit-animation: fade 1s;
-	animation: fade 1s;
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-image: url(../image/wel.jpg);
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-}
-
-@media screen and (max-width: 540px) {
-	.welcome-wrapper {
-		width: 100%;
-		margin: initial;
-	}
-
-	.welcome-text {
-		position: relative;
-		width: 100%;
-		color: #000;
-		padding: 23px;
-		border-radius: 0px;
-		font-size: 19px;
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-image: url(../image/wel.jpg);
-		text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	}
-
-
-	.overley {
-		position: absolute;
-		width: 90%;
-		height: 95%;
-		top: 15px;
-		left: 18px;
-		border-radius: 4px;
-		box-shadow: 0 10px 20px rgb(0 0 0 / 9%);
-		background-color: hsla(0, 0%, 100%, .55);
-	}
-
-	.btn-welcome {
-		font-weight: 600;
-		text-shadow: none;
-		z-index: 999;
-	}
-
-	.welcome-image {
-		display: none;
-	}
-}
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-
-	.welcome-wrapper {
-		width: 100%;
-		margin: initial;
-	}
-
-	.welcome-text {
-		padding: 14px;
-		border-radius: 0px;
-	}
-
-	.welcome-image {
-		border-radius: 0px;
-	}
-}
+.welcome-wrapper{width:95%;margin:3% auto;display:flex;justify-content:center;-webkit-animation:fade 1s;animation:fade .3s;transform:all .3s}.welcome-text{width:50%;padding:50px;font-size:21px;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;border-top-left-radius:10px;border-bottom-left-radius:10px;background-color:whitesmoke;box-shadow:0 10px 20px rgba(0, 0, 0, .09);text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);transition:all .3s}.welcome-text h1{margin:0.3em;z-index:8}.welcome-text h1:nth-child(1){-webkit-animation:textSlide .3s;animation:textSlide .3s}.welcome-text h1:nth-child(2){-webkit-animation:textSlide1 .3s;animation:textSlide1 .3s}.welcome-text h1:nth-child(3){-webkit-animation:textSlide .3s;animation:textSlide .3s}.welcome-text h1:nth-child(4){color:#551a8b;-webkit-animation:textSlide1 .3s;animation:textSlide1 .3s}.welcome-text h1:nth-child(3){-webkit-animation:textSlide2 .3s;animation:textSlide2 .3s}.btn-welcome{position:absolute;bottom:0;left:0px;width:50%;margin:auto;z-index:3;font-size:30px;font-weight:600;background-color:transparent;cursor:pointer;line-height:2rem;padding:5px;text-decoration:none;border:3px solid;border-radius:5px;color:#fff;letter-spacing: .1rem;display:flex;text-align:center;align-items:center;justify-content:center}.btn-welcome:hover{box-shadow:initial}.welcome-image{position:relative;width:50%;background-color:lavender;background-image:url(../image/wel.webp);background-position:center center;background-repeat:no-repeat;background-size:cover;border-top-right-radius:10px;border-bottom-right-radius:10px;transition:all .3s}.welcome-image img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover}@media screen and (max-width: 540px){.welcome-wrapper{width:100%;margin:initial}.welcome-text{position:relative;width:100%;color:#fff;padding:23px;border-radius:0px;font-size:19px;background-image:url(../image/wel.webp);background-position:center center;background-repeat:no-repeat;background-size:cover;text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}.welcome-text h1:nth-child(4){color:rgb(254 102 125)}.overley{position:absolute;width:90%;height:95%;top:15px;left:18px;border-radius:4px;box-shadow:0 10px 20px rgb(0 0 0 / 9%);background-color:hsla(0,0%,100%,.1)}.btn-welcome{color:#fff;border-color:#fff;font-weight:600;text-shadow:none;z-index:999}.welcome-image{display:none}}@media screen and (min-width: 540px) and (max-width: 780px){.welcome-wrapper{width:100%;margin:initial}.welcome-text{padding:14px;border-radius:0px}.welcome-image{border-radius:0px}}
