--- a/src/index.css
+++ b/src/index.css
@@ -1,244 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
-
-
-*,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	list-style: none;
-}
-
-html {
-	overflow-y: scroll;
-	width: 100%;
-	min-height: 100%;
-	scroll-behavior: smooth;
-}
-
-body {
-	width: 100%;
-	min-height: 100%;
-	font-size: 16px;
-	line-height: 1.5;
-	color: #000;
-	font-family: 'Montserrat', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background-color: lavender;
-}
-
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-a:link,
-a:active,
-a:visited {
-	list-style: none;
-	text-decoration: none;
-	color: inherit;
-}
-
-.main-wrapper {
-	display: flex;
-	min-height: 100vh;
-	flex-direction: column;	
-}
-
-.main-content {
-	flex: 1;
-}
-
-.container {
-	width: 1200px;
-	margin: 0 auto;
-}
-
-/*============= fade ==============*/
-@-webkit-keyframes fade {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
-}
-
-@keyframes fade {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
-}
-
-/*============= verticalSlide ==============*/
-@-webkit-keyframes verticalSlide {
-	0% {
-		opacity: .01;
-		transform: translateX(20px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
-@keyframes verticalSlide {
-	0% {
-		opacity: .01;
-		transform: translateX(-20px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
-/*============= textSlide ==============*/
-@-webkit-keyframes textSlide {
-	0% {
-		opacity: 0;
-		transform: translateX(-200px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-		transition: transform .4s ease-in, opacity .4s ease-in;
-	}
-}
-
-@keyframes textSlide {
-	0% {
-		opacity: 0;
-		transform: translateX(-200px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-		transition: transform .4s ease-in, opacity .4s ease-in;
-	}
-}
-
-@-webkit-keyframes textSlide1 {
-	0% {
-		opacity: 0;
-		transform: translateX(200px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-		transition: transform .4s ease-in, opacity .4s ease-in;
-	}
-}
-
-@keyframes textSlide1 {
-	0% {
-		opacity: 0;
-		transform: translateX(200px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-		transition: transform .4s ease-in, opacity .4s ease-in;
-	}
-}
-
-@-webkit-keyframes textSlide2 {
-	0% {
-		opacity: 0;
-		transform: translateY(200px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-		transition: transform .4s ease-in, opacity .4s ease-in;
-	}
-}
-
-@keyframes textSlide2 {
-	0% {
-		opacity: 0;
-		transform: translateY(200px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-		transition: transform .4s ease-in, opacity .4s ease-in;
-	}
-}
-
-@keyframes btnzoom {
-	0% {
-		transform: scale(0);
-	}
-	50% {
-		transform: scale(1);
-	}
-	75% {
-		transform: scale(.7);
-	}
-	100% {
-		transform: scale(1);
-	}
-}
-
-@keyframes btnzoom1 {
-	0% {
-		transform: scale(0);
-	}
-
-	100% {
-		transform: scale(1);
-	}
-}
-
-/*============= Gradient==============*/
-
-@-webkit-keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-@keyframes scrollIndicator {
-	0% {
-		transform: translate(0);
-	}
-	50% {
-		transform: translate(0, 20px);
-	}
-	100% {
-		transform: translate(0);
-	}
-}
-
-@media (max-width: 1200px) {
-	.container {
-		width: 100%;
-	}
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');*,*::before,*::after{margin:0;padding:0;box-sizing:border-box;list-style:none}html{overflow-y:scroll;width:100%;min-height:100%;scroll-behavior:smooth}body{width:100%;min-height:100%;font-size:16px;line-height:1.5;color:#000;font-family:'Montserrat',sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;background-color:lavender}code{font-family:source-code-pro,Menlo,Monaco,Consolas,'Courier New',monospace}a:link,a:active,a:visited{list-style:none;text-decoration:none;color:inherit}.main-wrapper{display:flex;min-height:100vh;flex-direction:column}.main-content{flex:1}.container{width:1200px;margin:0 auto}@-webkit-keyframes fade{0%{opacity:0}100%{opacity:1}}@keyframes fade{0%{opacity:0}100%{opacity:1}}@-webkit-keyframes verticalSlide{0%{opacity: .01;transform:translateX(20px)}100%{opacity:1;transform:translateX(0)}}@keyframes verticalSlide{0%{opacity: .01;transform:translateX(-20px)}100%{opacity:1;transform:translateX(0)}}@-webkit-keyframes textSlide{0%{opacity:0;transform:translateX(-200px)}100%{opacity:1;transform:translateX(0);transition:transform .4s ease-in, opacity .4s ease-in}}@keyframes textSlide{0%{opacity:0;transform:translateX(-200px)}100%{opacity:1;transform:translateX(0);transition:transform .4s ease-in, opacity .4s ease-in}}@-webkit-keyframes textSlide1{0%{opacity:0;transform:translateX(200px)}100%{opacity:1;transform:translateX(0);transition:transform .4s ease-in, opacity .4s ease-in}}@keyframes textSlide1{0%{opacity:0;transform:translateX(200px)}100%{opacity:1;transform:translateX(0);transition:transform .4s ease-in, opacity .4s ease-in}}@-webkit-keyframes textSlide2{0%{opacity:0;transform:translateY(200px)}100%{opacity:1;transform:translateY(0);transition:transform .4s ease-in, opacity .4s ease-in}}@keyframes textSlide2{0%{opacity:0;transform:translateY(200px)}100%{opacity:1;transform:translateY(0);transition:transform .4s ease-in, opacity .4s ease-in}}@keyframes btnzoom{0%{transform:scale(0)}50%{transform:scale(1)}75%{transform:scale(.7)}100%{transform:scale(1)}}@keyframes btnzoom1{0%{transform:scale(0)}100%{transform:scale(1)}}@-webkit-keyframes gradient{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}@keyframes gradient{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}@keyframes scrollIndicator{0%{transform:translate(0)}50%{transform:translate(0,20px)}100%{transform:translate(0)}}@media (max-width: 1200px){.container{width:100%}}
