--- a/src/styles/favourite.css
+++ b/src/styles/favourite.css
@@ -1,351 +1,1 @@
-.fav-list__container {
-	position: relative;
-	width: 100%;
-	margin-top: 50px;
-	padding: 0px 170px;
-	display: flex;
-	flex-direction: column;
-	animation: fade 1s;
-}
-
-ul.fav-caption {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	transition: all .3s;
-}
-
-.fav-list__cardwrapper {
-	position: relative;
-	width: 100%;
-	margin: 70px 0px;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 2rem;
-	transition: all .3s;
-}
-
-.fav-list__container h2:before {
-	position: absolute;
-	content: "";
-	top: 40px;
-	height: 2px;
-	width: 5%;
-	background: salmon;
-}
-
-.food-list__favcard {
-	position: relative;
-	width: 17%;
-	border-radius: 5px;
-	transition: all .3s;
-}
-
-.btn-stored__favactive,
-.btn-store__favactive {
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	cursor: pointer;
-	outline: none;
-	width: 35px;
-	height: 35px;
-	font-weight: 600;
-	border: 1px solid transparent;
-	border-radius: 50%;
-	background-color: #fff;
-	box-shadow: 1px 7px 14px -11px #001;
-	padding-top: 5px;
-	z-index: 999;
-	transition: all .4s;
-}
-
-.btn-stored__favactive:hover{
-	background-color: lavender;
-	box-shadow: none;
-}
-
-.exit-favactive {
-	display: none;
-	transition: all .4s;
-}
-
-.btn-store__fav {
-	position: absolute;
-	bottom: 92%;
-	left: 92%;
-	cursor: pointer;
-	outline: none;
-	width: 35px;
-	height: 35px;
-	font-weight: 600;
-	border: 1px solid transparent;
-	border-radius: 50%;
-	box-shadow: 1px 7px 14px -11px #001;
-	background-color: #fff;
-	padding-top: 5px;
-	z-index: 999;
-	transition: all .4s;
-}
-
-.btn-store__fav1 {
-	outline: none;
-	width: 35px;
-	height: 35px;
-	font-size: 20px;
-	font-weight: 600;
-	border-radius: 50%;
-	color: salmon;
-	background-color: #fff;
-	border: 1px solid transparent;
-	box-shadow: 1px 7px 14px -11px #001;
-	padding-top: 5px;
-}
-
-.btn-store__favactive:hover,
-.btn-store__fav:hover {
-	box-shadow: none;
-}
-
-.notification {
-	position: absolute;
-	left: 0;
-	top: 27px;
-	display: inline-flex;
-	width: 120px;
-	text-align: left;
-	border: none;
-}
-
-.fav-list__poster {
-	width: 100%;
-	padding-bottom: 100%;
-	overflow: hidden;
-	display: block;
-	position: relative;
-	border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-}
-
-.confirm {
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding: initial;
-	width: 100%;
-	height: 100%;
-	opacity: 1;
-	overflow: hidden;
-	border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	background-color: hsla(0, 0%, 100%, .21);
-	z-index: 9999;
-	transition: all .4s;
-}
-
-.confirm-annex {
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding: 0;
-	width: 0;
-	height: 0;
-	opacity: 0;
-	overflow: hidden;
-	border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-	z-index: -1;
-	transition: all .4s;
-}
-
-.popup {
-	width: 100%;
-	height: 60%;
-	margin-top: 57%;
-	background: lavender;
-	display: flex;
-	flex-direction: column;
-	background: lavender;
-	border-bottom-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-}
-
-ul.alert-box {
-	padding: 5px;
-	border-radius: 4px;
-}
-
-.btn-close {
-	float: right;
-	font-family: inherit;
-	outline: none;
-	width: 35px;
-	height: 35px;
-	color: red;
-	font-size: 25px;
-	cursor: pointer;
-	border-radius: 50%;
-	border: 1px solid transparent;
-}
-
-.btn-close:hover {
-	background-color: #fff;
-	box-shadow: 1px 7px 14px -11px #001;
-}
-
-ul.popup-content {
-	padding: 5px;
-	margin-top: 6px;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	background-color: hsla(0, 0%, 100%, .21);
-}
-
-ul.popup-content li:first-child p {
-	padding: 10px 0px 0px 0px;
-}
-
-ul.popup-content li p {
-	width: 100%;
-	font-size: 13px;
-	padding: 0px 0px 10px 0px;
-	text-transform: capitalize;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-.btn-yes {
-	width: 95%;
-	font-size: 17px;
-	margin: 13px 4px;
-	line-height: 1.5rem;
-	cursor: pointer;
-	outline: none;
-	border: 2px solid salmon;
-	color: salmon;
-	border-radius: 25px;
-	text-decoration: none;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .10);
-	box-shadow: 0px 7px 14px -11px rgb(254, 102, 125);
-	transition: all .2s;
-}
-
-.fav-list__poster img {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.optional-image {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.fav-title__discover {
-	padding: 10px;
-	box-shadow: 0 3px 6px rgba(0, 0, 0, .20);
-	border-bottom-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	background-color: hsla(0, 0%, 100%, .21);
-}
-
-.fav-title {
-	text-align: center;
-	text-transform: capitalize;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-.fav-btn__discover {
-	width: 100%;
-	font-size: 17px;
-	margin: 8px 0px;
-	line-height: 1.5rem;
-	cursor: pointer;
-	outline: none;
-	border: 2px solid salmon;
-	color: salmon;
-	border-radius: 25px;
-	text-decoration: none;
-	box-shadow: 0px 7px 14px -11px rgb(254, 102, 125);
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .10);
-	transition: all .2s;
-}
-
-.fav-btn__discover:hover,
-.btn-yes:hover {
-	box-shadow: 0px 0px 5px #fff;
-	color: #61045f;
-	border-color: #61045f;
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-	.fav-list__container {
-		padding: 0px 10px;
-		margin-top: 30px;
-	}
-
-	ul.fav-caption li h2 {
-		font-size: 18px;
-	}
-
-	.fav-caption__text {
-		display: none;
-	}
-
-	.food-list__favcard {
-		width: 45%;
-		margin-left: 6px;
-	}
-
-	.fav-list__cardwrapper {
-		grid-gap: 1rem;
-		gap: 1rem;
-		margin: 40px 0px;
-	}
-
-	.fav-list__container h2:before {
-		width: 25%;
-	}
-
-	.popup {
-		height: 70%;
-		margin-top: 75px;
-	}
-}
-
-@media (min-width: 481px) and (max-width: 768px) {
-	.fav-list__container {
-		padding: 0px 10px;
-		margin-top: 30px;
-	}
-
-	.food-list__favcard {
-		width: 29%;
-		margin-left: 10px;
-	}
-
-	.fav-list__cardwrapper {
-		margin: 28px 0px;
-	}
-
-	.fav-list__container h2:before {
-		width: 20%;
-	}
-}
+.fav-list__container{position:relative;width:100%;margin-top:50px;padding:0px 170px;display:flex;flex-direction:column;animation:fade 1s}ul.fav-caption{width:100%;display:flex;justify-content:space-between;flex-wrap:wrap;transition:all .3s}.fav-list__cardwrapper{position:relative;width:100%;margin:70px 0px;display:flex;flex-wrap:wrap;gap:2rem;transition:all .3s}.fav-list__container h2:before{position:absolute;content:"";top:40px;height:2px;width:5%;background:salmon}.food-list__favcard{position:relative;width:17%;border-radius:5px;transition:all .3s}.btn-stored__favactive,.btn-store__favactive{position:absolute;top:5px;left:5px;cursor:pointer;outline:none;width:35px;height:35px;font-weight:600;border:1px solid transparent;border-radius:50%;background-color:#fff;box-shadow:1px 7px 14px -11px #001;padding-top:5px;z-index:999;transition:all .4s}.btn-stored__favactive:hover{background-color:lavender;box-shadow:none}.exit-favactive{display:none;transition:all .4s}.btn-store__fav{position:absolute;bottom:92%;left:92%;cursor:pointer;outline:none;width:35px;height:35px;font-weight:600;border:1px solid transparent;border-radius:50%;box-shadow:1px 7px 14px -11px #001;background-color:#fff;padding-top:5px;z-index:999;transition:all .4s}.btn-store__fav1{outline:none;width:35px;height:35px;font-size:20px;font-weight:600;border-radius:50%;color:salmon;background-color:#fff;border:1px solid transparent;box-shadow:1px 7px 14px -11px #001;padding-top:5px}.btn-store__favactive:hover,.btn-store__fav:hover{box-shadow:none}.notification{position:absolute;left:0;top:27px;display:inline-flex;width:120px;text-align:left;border:none}.fav-list__poster{width:100%;padding-bottom:100%;overflow:hidden;display:block;position:relative;border-top-right-radius:5px;border-top-left-radius:5px}.confirm{position:absolute;top:0;left:0;padding:initial;width:100%;height:100%;opacity:1;overflow:hidden;border-top-right-radius:5px;border-top-left-radius:5px;border-bottom-right-radius:25px;border-bottom-left-radius:25px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);box-shadow:0 10px 20px rgba(0, 0, 0, .09);background-color:hsla(0, 0%, 100%, .21);z-index:9999;transition:all .4s}.confirm-annex{position:absolute;top:0;left:0;padding:0;width:0;height:0;opacity:0;overflow:hidden;border-top-right-radius:5px;border-top-left-radius:5px;border-bottom-right-radius:25px;border-bottom-left-radius:25px;z-index:-1;transition:all .4s}.popup{width:100%;height:60%;margin-top:57%;background:lavender;display:flex;flex-direction:column;background:lavender;border-bottom-right-radius:25px;border-bottom-left-radius:25px}ul.alert-box{padding:5px;border-radius:4px}.btn-close{float:right;font-family:inherit;outline:none;width:35px;height:35px;color:red;font-size:25px;cursor:pointer;border-radius:50%;border:1px solid transparent}.btn-close:hover{background-color:#fff;box-shadow:1px 7px 14px -11px #001}ul.popup-content{padding:5px;margin-top:6px;box-shadow:0 10px 20px rgba(0, 0, 0, .09);background-color:hsla(0, 0%, 100%, .21)}ul.popup-content li:first-child p{padding:10px 0px 0px 0px}ul.popup-content li p{width:100%;font-size:13px;padding:0px 0px 10px 0px;text-transform:capitalize;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.btn-yes{width:95%;font-size:17px;margin:13px 4px;line-height:1.5rem;cursor:pointer;outline:none;border:2px solid salmon;color:salmon;border-radius:25px;text-decoration:none;text-shadow:0 3px 6px rgba(0, 0, 0, .10);box-shadow:0px 7px 14px -11px rgb(254, 102, 125);transition:all .2s}.fav-list__poster img{width:100%;min-height:100%;position:absolute;left:0;top:0}.optional-image{width:100%;min-height:100%;position:absolute;left:0;top:0}.fav-title__discover{padding:10px;box-shadow:0 3px 6px rgba(0, 0, 0, .20);border-bottom-right-radius:25px;border-bottom-left-radius:25px;box-shadow:0 10px 20px rgba(0,0,0,.09);background-color:hsla(0,0%,100%,.21)}.fav-title{text-align:center;text-transform:capitalize;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.fav-btn__discover{width:100%;font-size:17px;margin:8px 0px;line-height:1.5rem;cursor:pointer;outline:none;border:2px solid salmon;color:salmon;border-radius:25px;text-decoration:none;box-shadow:0px 7px 14px -11px rgb(254, 102, 125);text-shadow:0 3px 6px rgba(0, 0, 0, .10);transition:all .2s}.fav-btn__discover:hover,.btn-yes:hover{box-shadow:0px 0px 5px #fff;color:#61045f;border-color:#61045f}@media (min-width: 320px) and (max-width: 480px){.fav-list__container{padding:0px 10px;margin-top:30px}ul.fav-caption li h2{font-size:18px}.fav-caption__text{display:none}.food-list__favcard{width:45%;margin-left:6px}.fav-list__cardwrapper{grid-gap:1rem;gap:1rem;margin:40px 0px}.fav-list__container h2:before{width:25%}.popup{height:70%;margin-top:75px}}@media (min-width: 481px) and (max-width: 768px){.fav-list__container{padding:0px 10px;margin-top:30px}.food-list__favcard{width:29%;margin-left:10px}.fav-list__cardwrapper{margin:28px 0px}.fav-list__container h2:before{width:20%}}
