--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,172 +1,1 @@
-.main-wrapper {
-	width: 100%;
-	border-radius: 6px;
-	list-style: none;
-	z-index: -1;
-	animation: fade 1s;
-}
-
-.outer-main__section,
-.outer-main__section1 {
-	position: relative;
-	width: 100%;
-	border-radius: 6px;
-}
-
-.outer-main__section::before,
-.outer-main__section1::before {
-	content: "";
-	position: absolute;
-	top: 51px;
-	right: 0;
-	width: 28%;
-	height: 296px;
-	z-index: 1;
-	-webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-	clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-	border-top-left-radius: 50%;
-	border-bottom-left-radius: 50%;
-	background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
-}
-
-.outer-main__section1::before {
-	background-image: linear-gradient(to top, #cc208e 0%, #980369 100%);
-}
-
-.inner-main__section {
-	position: relative;
-	width: 100%;
-	padding: 10px;
-	border-radius: 6px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.inner-main__section1 {
-	position: relative;
-	width: 100%;
-	border-radius: 6px;
-	display: flex;
-	justify-content: space-between;
-	background-color: #f5f5f5;
-	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.09);
-}
-
-.inner-main__section p {
-	padding: 10px;
-	float: left;
-}
-
-.random-wrapper {
-	position: relative;
-	width: 37%;
-	height: 100%;
-	z-index: 3;
-}
-
-.search-wrapper {
-	width: 100%;
-	list-style: none;
-}
-
-.randomgenerator-wrapper {
-	width: 100%;
-	list-style: none;
-}
-
-.error-wrapper {
-	font-size: 20px;
-	text-align: center;
-	margin: 30px;
-}
-
-.error-wrapper > div {
-	margin: 15px;
-	display: flex;
-	gap: .5rem;
-	justify-content: center;
-}
-
-.emotions {
-	width: 26px;
-	height: 23px;
-	border-radius: 50%;
-	background-color: black;
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
-	animation: horizontalFade 1s infinite alternate;
-}
-
-.emotions1 {
-	width: 26px;
-	height: 23px;
-	border-radius: 50%;
-	background-color: black;
-	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
-}
-
-@media screen and (max-width: 540px) {
-	.container {
-		width: auto;
-	}
-
-	.main-wrapper {
-		padding: initial;
-	}
-
-	.outer-main__section,
-	.outer-main__section1 {
-		border-top-right-radius: 0px;
-		border-top-left-radius: 0px;
-	}
-
-	.outer-main__section::before,
-	.outer-main__section1::before {
-		display: none;
-	}
-
-	.random-wrapper {
-		width: 100%;
-	}
-
-	.inner-main__section1 {
-		flex-direction: column-reverse;
-		padding: 10px;
-	}
-}
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-	.container {
-		width: auto;
-	}
-
-	.main-wrapper {
-		padding: initial;
-	}
-
-	.outer-main__section,
-	.outer-main__section1 {
-		border-radius: 0px;
-	}
-
-	.outer-main__section::before,
-	.outer-main__section1::before {
-		height: 227px;
-		width: 210px;
-	}
-
-}
-
-@media screen and (min-width: 781px) and (max-width: 1200px) {
-	.main-wrapper {
-		padding: 0px 10px;
-	}
-
-	.typetext,
-	.blockquote h2 {
-		font-size: 16px;
-		color: red;
-	}
-}
+.main-wrapper{width:100%;border-radius:6px;list-style:none;z-index:-1;animation:fade 1s}.outer-main__section,.outer-main__section1{position:relative;width:100%;border-radius:6px}.outer-main__section::before,.outer-main__section1::before{content:"";position:absolute;top:51px;right:0;width:28%;height:296px;z-index:1;-webkit-clip-path:polygon(0 0, 100% 0%, 100% 100%, 0% 100%);clip-path:polygon(0 0, 100% 0%, 100% 100%, 0% 100%);border-top-left-radius:50%;border-bottom-left-radius:50%;background:linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%)}.outer-main__section1::before{background-image:linear-gradient(to top, #cc208e 0%, #980369 100%)}.inner-main__section{position:relative;width:100%;padding:10px;border-radius:6px;display:flex;flex-wrap:wrap;justify-content:space-between}.inner-main__section1{position:relative;width:100%;border-radius:6px;display:flex;justify-content:space-between;background-color:#f5f5f5;box-shadow:0px 10px 20px rgba(0, 0, 0, 0.09)}.inner-main__section p{padding:10px;float:left}.random-wrapper{position:relative;width:37%;height:100%;z-index:3}.search-wrapper{width:100%;list-style:none}.randomgenerator-wrapper{width:100%;list-style:none}.error-wrapper{font-size:20px;text-align:center;margin:30px}.error-wrapper>div{margin:15px;display:flex;gap: .5rem;justify-content:center}.emotions{width:26px;height:23px;border-radius:50%;background-color:black;text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);box-shadow:0px 10px 13px -7px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);animation:horizontalFade 1s infinite alternate}.emotions1{width:26px;height:23px;border-radius:50%;background-color:black;text-shadow:0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);box-shadow:0px 10px 13px -7px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%)}@media screen and (max-width: 540px){.container{width:auto}.main-wrapper{padding:initial}.outer-main__section,.outer-main__section1{border-top-right-radius:0px;border-top-left-radius:0px}.outer-main__section::before,.outer-main__section1::before{display:none}.random-wrapper{width:100%}.inner-main__section1{flex-direction:column-reverse;padding:10px}}@media screen and (min-width: 540px) and (max-width: 780px){.container{width:auto}.main-wrapper{padding:initial}.outer-main__section,.outer-main__section1{border-radius:0px}.outer-main__section::before,.outer-main__section1::before{height:227px;width:210px}}@media screen and (min-width: 781px) and (max-width: 1200px){.main-wrapper{padding:0px 10px}.typetext, .blockquote h2{font-size:16px;color:red}}
