--- a/src/styles/random.css
+++ b/src/styles/random.css
@@ -1,241 +1,1 @@
-.random-list__card {
-	width: 100%;
-	height: 100%;
-	transition: all .3s;
-	list-style: none;
-}
-
-.image-details__wrapper {
-	width: 100%;
-	transition: all .3s;
-}
-
-.image-details {
-	width: 220px;
-	transition: all .3s;
-}
-
-.random-list__postertitle {
-	width: 100%;
-}
-
-.random-list__postertitle p {
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-}
-
-.main-random__caption, .main-random__caption1  {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-}
-
-
-.btn-random__pick,
-.btn-random__pick1 {
-	width: 50%;
-	font-size: 18px;
-	outline: none;
-	border: none;
-	text-decoration: none;
-	color: #fff;
-	background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
-	box-shadow: 0px 10px 14px -14px rgb(254, 102, 125);
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	transition: all .3s;
-}
-
-.btn-random__pick1 {
-	background-image: linear-gradient(to top, #cc208e 0%, #980369 100%);
-}
-
-.random-list__poster {
-	width: 100%;
-	padding-top: 20px;
-	border-radius: 50%;
-	transition: all .3s;
-}
-
-.random-list__poster img {
-	width: 100%;
-	height: 100%;
-	border: 5px double whitesmoke;
-	object-fit: cover;
-	border-radius: 50%;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-	animation: fade 1s;
-}
-
-.optional-image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 50%;
-	border: 4px double #f5f5f5;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-}
-
-.title-button {
-	width: 100%;
-	overflow: hidden;
-}
-
-.category, .category1 {
-	font-size: 18px;
-	padding: 5px;
-	width: 50%;
-	display: block;
-	border-radius: 3px;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
-
-
-.btn-random,
-.btn-random1 {
-	top: 310px;
-	left: 0px;
-	width: 100%;
-	font-family: inherit;
-	font-size: 17px;
-	margin-top: 5px;
-	line-height: 2rem;
-	cursor: pointer;
-	outline: none;
-	border: 2px solid #ff5550;
-	color: #ff5550;
-	border-radius: 5px;
-	text-decoration: none;
-	box-shadow: 0px 10px 14px -10px rgb(254, 102, 67);
-	background-color: transparent;
-	transition: all .2s;
-	text-shadow: 0px 0px 0px #ff5550;
-}
-
-.btn-random1 {
-	border: 2px solid #980369;
-	color: #980369;
-	border-radius: 5px;
-	text-decoration: none;
-	box-shadow: 0px 10px 14px -10px#980369;
-}
-
-.btn-random:hover {
-	box-shadow: none;
-	text-shadow: none;
-	border-color: #444;
-	color: #444;
-}
-
-.btn-random1:hover {
-	box-shadow: none;
-	color: #61045f;
-	border-color: #61045f;
-}
-
-
-@media screen and (max-width: 540px) {
-	
-	.main-random__caption, .main-random__caption1 {
-		padding: 5px;
-	}
-
-	.image-details__wrapper {
-		padding-top: 15px;
-	}
-
-	.image-details {
-		width: 100%;
-		display: flex;
-	}
-
-
-	.title-button {
-		flex-direction: column;
-		display: flex;
-		width: 70%;
-		padding: 0px 10px;
-		justify-content: center;
-	}
-
-
-	.random-list__poster {
-		width: 35%;
-		padding-top: 0px;
-		border-radius: 50%;
-	}
-
-
-	.random-list__poster img {
-		border: 2px solid #ffffff;
-	}
-
-
-	.random-list__card {
-		width: 100%; 
-		padding: 0px;
-		margin: 0px 0px -57px 0px;
-	}
-
-
-	.random-list__postertitle {
-		top: 75%; 
-		left: initial;
-		right: 0px;
-	}
-
-	.btn-random__pick,
-	.btn-random__pick1 {
-		text-align: right;
-		padding: 0px 5px;
-	}
-
-	.btn-random,
-	.btn-random1 {
-		left: initial;
-		right: 0px;
-		font-size: 15px;
-		line-height: 1.5rem;
-		top: 100%;
-	}
-
-
-}
-
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-
-	.main-random__caption {
-		padding: 5px;
-		color: #fff;
-		background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
-	}
-
-	.main-random__caption1 {
-		padding: 5px;
-		color: #fff;
-		background-image: linear-gradient(to top, #cc208e 0%, #980369 100%);
-	}
-
-	.random-list__postertitle {
-		top: 204px;
-	}
-
-	.random-list__poster {
-		width: 76%;
-		padding-top: 5px;
-		border-radius: 50%;
-	}
-
-	.btn-random__pick {
-		background: none;
-	}
-
-	.btn-random__pick1 {
-		background: none;
-	}
-
-}
+.random-list__card{width:100%;height:100%;transition:all .3s;list-style:none}.image-details__wrapper{width:100%;transition:all .3s}.image-details{width:220px;transition:all .3s}.random-list__postertitle{width:100%}.random-list__postertitle p{white-space:nowrap;text-overflow:ellipsis;overflow:hidden}.main-random__caption,.main-random__caption1{width:100%;display:flex;justify-content:space-between}.btn-random__pick,.btn-random__pick1{width:50%;font-size:18px;outline:none;border:none;text-decoration:none;color:#fff;background:linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);box-shadow:0px 10px 14px -14px rgb(254, 102, 125);text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);white-space:nowrap;text-overflow:ellipsis;overflow:hidden;transition:all .3s}.btn-random__pick1{background-image:linear-gradient(to top, #cc208e 0%, #980369 100%)}.random-list__poster{width:100%;padding-top:20px;border-radius:50%;transition:all .3s}.random-list__poster img{width:100%;height:100%;border:5px double whitesmoke;object-fit:cover;border-radius:50%;box-shadow:0 10px 20px rgba(0, 0, 0, .09);animation:fade 1s}.optional-image{width:100%;height:100%;object-fit:cover;border-radius:50%;border:4px double #f5f5f5;box-shadow:0 10px 20px rgba(0,0,0,.09)}.title-button{width:100%;overflow:hidden}.category,.category1{font-size:18px;padding:5px;width:50%;display:block;border-radius:3px;text-shadow:0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0,0,0,.23)}.btn-random,.btn-random1{top:310px;left:0px;width:100%;font-family:inherit;font-size:17px;margin-top:5px;line-height:2rem;cursor:pointer;outline:none;border:2px solid #ff5550;color:#ff5550;border-radius:5px;text-decoration:none;box-shadow:0px 10px 14px -10px rgb(254, 102, 67);background-color:transparent;transition:all .2s;text-shadow:0px 0px 0px #ff5550}.btn-random1{border:2px solid #980369;color:#980369;border-radius:5px;text-decoration:none;box-shadow:0px 10px 14px -10px#980369}.btn-random:hover{box-shadow:none;text-shadow:none;border-color:#444;color:#444}.btn-random1:hover{box-shadow:none;color:#61045f;border-color:#61045f}@media screen and (max-width: 540px){.main-random__caption,.main-random__caption1{padding:5px}.image-details__wrapper{padding-top:15px}.image-details{width:100%;display:flex}.title-button{flex-direction:column;display:flex;width:70%;padding:0px 10px;justify-content:center}.random-list__poster{width:35%;padding-top:0px;border-radius:50%}.random-list__poster img{border:2px solid #fff}.random-list__card{width:100%;padding:0px;margin:0px 0px -57px 0px}.random-list__postertitle{top:75%;left:initial;right:0px}.btn-random__pick,.btn-random__pick1{text-align:right;padding:0px 5px}.btn-random,.btn-random1{left:initial;right:0px;font-size:15px;line-height:1.5rem;top:100%}}@media screen and (min-width: 540px) and (max-width: 780px){.main-random__caption{padding:5px;color:#fff;background:linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%)}.main-random__caption1{padding:5px;color:#fff;background-image:linear-gradient(to top, #cc208e 0%, #980369 100%)}.random-list__postertitle{top:204px}.random-list__poster{width:76%;padding-top:5px;border-radius:50%}.btn-random__pick{background:none}.btn-random__pick1{background:none}}
